feat(jvmlog): add batch 25 capacity/jitter/completeness views (247 tests passing)
- jvmlog-oom-risk-timeline: rolling heap fill % with OOM risk score (CRITICAL/HIGH/ELEVATED/LOW)
- jvmlog-gc-jitter-analysis: coefficient of variation and P99/P50 ratio by GC type
- jvmlog-heap-utilisation-heatmap: GC event density in time × fill% buckets
- jvmlog-old-gen-occupancy-trend: Parallel/CMS old gen fill% with rolling average
- jvmlog-gc-log-completeness: coverage report (heap/phase/worker/safepoint records present)